# scraperAgent

./: README.md  main.py  pyproject.toml
actions/: base_action.py  navigate_to.py  no_action.py
config/: scraper_config.py
core/: extractor_manager.py  loader_manager  loader_manager.py  navigation_controller.py  navigator_manager.py  parser_manager.py  scraper_agent.py
extractors/: base_extractor.py  bs4_extractor.py  html_simplifier.py
loaders/: base_loader.py  context_pool.py  js_loader.py  playwright_browser_pool.py  static_loader.py
models/: action_type.py  navigation_action.py  page_context.py  page_element.py
navigators/: base_navigator.py  basic_navigator.py  complex_navigator.py
parsers/: base_parser.py  bs4_parser.py
