[project]
name = "scraperAgent"
version = "0.1.0"
description = ""
authors = [
    {name = "Max Li",email = "143444069+notttired@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium (>=4.34.2,<5.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "fastapi (>=0.116.1,<0.117.0)",
    "playwright (>=1.53.0,<2.0.0)",
    "openai (>=1.95.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "asyncio (>=3.4.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
